# llamaindex_foundational_retrieval

./: .gitignore  main.py  pyproject.toml
data/: __init__.py  create_synthetic.py  prepare.py
evaluation/: evaluate.py
experiments/: functional_tests.ipynb
mcp/: server.py
models/: __init__.py  embedder.py
pipeline/: __init__.py  chunk.py  retrieve.py  run_pipeline.py  utils.py  vector_db.py
