[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-foundational-retrieval"
version = "0.1.0"
description = "Local knowledge RAG-based system that uses Small-to-Big retrieval"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "datasets>=4.8.4",
    "deepeval>=3.9.6",
    "huggingface-hub>=1.10.0",
    "ipywidgets",
    "llama-index>=0.14.20",
    "llama-index-readers-huggingface-fs>=0.5.0",
    "ipykernel",
    "setuptools>=82.0.1",
    "milvus-lite==2.5.2rc1",
    "pip>=26.0.1",
    "pymilvus>=2.6.12",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "commitizen>=3.29.0",
]

[tool.setuptools]
packages = ["pipeline", "data", "models"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
bump_message = "bump: version $current_version -> $new_version [skip ci]"
